--- a/locale/pt_BR/LC_MESSAGES/django.po
+++ b/locale/pt_BR/LC_MESSAGES/django.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-10-18 11:46+0100\n"
-"PO-Revision-Date: 2017-10-18 12:06+0100\n"
+"POT-Creation-Date: 2017-10-18 12:17+0100\n"
+"PO-Revision-Date: 2017-10-18 12:18+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: pt_BR\n"
@@ -312,11 +312,11 @@ msgstr ""
 
 #: mymwebsite/templates/cases/usingyourowndata.html:11
 msgid ""
-"With today\\'s technology we can do that ourselves, can\\'t we? So, why we "
-"do not build our own big data? Is it worth the effort?"
+"With today's technology we can do that ourselves, can't we? So, why we do "
+"not build our own big data? Is it worth the effort?"
 msgstr ""
 "Com a tecnologia de hoje podemos fazer isso sozinhos, não podemos? Então, "
-"por que não construímos nosso próprio big data? Vale o esforço?"
+"por que não construímos nosso próprio big data? Vale o esforço? "
 
 #: mymwebsite/templates/cases/usingyourowndata.html:12
 msgid ""
@@ -353,13 +353,12 @@ msgstr ""
 #: mymwebsite/templates/cases/usingyourowndata.html:15
 msgid ""
 "To Prove this statement, we have the study released in July 2015 by BARC, "
-"called \\'Big Data Use Cases\\'), with over <strong>540 participants "
-"worldwide </strong>, which can be found (in the German original) "
+"called 'Big Data Use Cases', with over <strong>540 participants worldwide </"
+"strong>, which can be found (in the German original) "
 msgstr ""
 "Para provar esta afirmação, temos o estudo publicado em julho de 2015 pela "
-"BARC, chamado \\ ‘Big Data Use Cases \\’, com mais de <strong> 540 "
-"participantes em todo o mundo </ strong>, que pode ser encontrado (no "
-"original alemão)"
+"BARC, chamado ‘Big Data Use Cases’, com mais de <strong> 540 participantes "
+"em todo o mundo </strong>, que pode ser encontrado (no original alemão)"
 
 #: mymwebsite/templates/cases/usingyourowndata.html:15
 msgid "here."
