--- a/locale/pt/LC_MESSAGES/django.po
+++ b/locale/pt/LC_MESSAGES/django.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-10-18 11:46+0100\n"
+"POT-Creation-Date: 2017-10-18 12:17+0100\n"
 "PO-Revision-Date: 2017-10-17 16:46+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -305,8 +305,8 @@ msgstr ""
 
 #: mymwebsite/templates/cases/usingyourowndata.html:11
 msgid ""
-"With today\\'s technology we can do that ourselves, can\\'t we? So, why we "
-"do not build our own big data? Is it worth the effort?"
+"With today's technology we can do that ourselves, can't we? So, why we do "
+"not build our own big data? Is it worth the effort?"
 msgstr ""
 
 #: mymwebsite/templates/cases/usingyourowndata.html:12
@@ -334,8 +334,8 @@ msgstr ""
 #: mymwebsite/templates/cases/usingyourowndata.html:15
 msgid ""
 "To Prove this statement, we have the study released in July 2015 by BARC, "
-"called \\'Big Data Use Cases\\'), with over <strong>540 participants "
-"worldwide </strong>, which can be found (in the German original) "
+"called 'Big Data Use Cases', with over <strong>540 participants worldwide </"
+"strong>, which can be found (in the German original) "
 msgstr ""
 
 #: mymwebsite/templates/cases/usingyourowndata.html:15
