--- a/locale/pt_BR/LC_MESSAGES/django.po
+++ b/locale/pt_BR/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-10-18 12:17+0100\n"
-"PO-Revision-Date: 2017-10-18 12:18+0100\n"
+"PO-Revision-Date: 2017-10-18 12:23+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: pt_BR\n"
@@ -358,7 +358,7 @@ msgid ""
 msgstr ""
 "Para provar esta afirmação, temos o estudo publicado em julho de 2015 pela "
 "BARC, chamado ‘Big Data Use Cases’, com mais de <strong> 540 participantes "
-"em todo o mundo </strong>, que pode ser encontrado (no original alemão)"
+"em todo o mundo </strong>, que pode ser encontrado (no original alemão) "
 
 #: mymwebsite/templates/cases/usingyourowndata.html:15
 msgid "here."
@@ -375,9 +375,9 @@ msgid ""
 msgstr ""
 "As empresas utilizam várias fontes de dados para formar seu big data. Do "
 "mesmo estudo da BARC, sabemos que hoje 64% usam seus sistemas transacionais "
-"como fonte de dados, mas também podemos ver que, no futuro, <strong> 46% </ "
-"strong> das empresas estarão usando <strong > imagens como dados de origem "
-"para formar seu big data</ strong>."
+"como fonte de dados, mas também podemos ver que, no futuro, <strong> 46% </"
+"strong> das empresas estarão usando <strong> imagens como dados de origem "
+"para formar seu big data</strong>."
 
 #: mymwebsite/templates/cases/usingyourowndata.html:17
 #, python-format
@@ -439,7 +439,7 @@ msgid ""
 "need to "
 msgstr ""
 "Mas tudo bem, nós estamos colocando a carroça na frente dos bois! Em "
-"primeiro lugar, você precisa"
+"primeiro lugar, por favor "
 
 #: mymwebsite/templates/cases/usingyourowndata.html:24
 msgid ""
