--- a/locale/pt_BR/LC_MESSAGES/django.po
+++ b/locale/pt_BR/LC_MESSAGES/django.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-10-18 14:09+0100\n"
-"PO-Revision-Date: 2017-10-18 14:09+0100\n"
+"POT-Creation-Date: 2017-10-18 16:21+0100\n"
+"PO-Revision-Date: 2017-10-18 16:21+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: pt_BR\n"
@@ -132,12 +132,12 @@ msgstr "Usando Seus Dados Em Benefício Próprio"
 msgid ""
 "Do like all big tech corporations are doing. They are using <u>your</u> data "
 "for <u>their</u> benefit, and most of the time we cannot prevent that. "
-"<mark>But we can use our own data for our own benefit, can\\'t we?</mark>. "
+"<mark>But we can use our own data for our own benefit, can't we?</mark>. "
 msgstr ""
 "Faça o que estão fazendo todas as corporações de alta tecnologia. Elas estão "
 "usando os <u>seus</u> dados em benefício <u>delas</u>, e na maioria das "
 "vezes não podemos evitar isso. <mark>Mas podemos usar nossos próprios dados "
-"para nosso próprio benefício, não podemos?</mark>."
+"para nosso próprio benefício, não podemos?</mark>. "
 
 #: mymwebsite/templates/cases/followingremotejobs.html:7
 msgid "Following Jobs Remotely"
