--- a/locale/pt_BR/LC_MESSAGES/django.po
+++ b/locale/pt_BR/LC_MESSAGES/django.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-10-20 11:49+0100\n"
-"PO-Revision-Date: 2017-10-20 11:54+0100\n"
+"POT-Creation-Date: 2017-10-20 12:17+0100\n"
+"PO-Revision-Date: 2017-10-20 12:19+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: pt_BR\n"
@@ -931,12 +931,11 @@ msgstr "Ao usar nossa web app, você pode fazê-lo manualmente "
 msgid "(See here.)"
 msgstr "(Veja aqui.)"
 
-#: mymwebsite/templates/faq.html:48 mymwebsite/templates/howto.html:48
-msgid ""
-"Or you can automatically share your captures to Twitter, Facebook or email "
+#: mymwebsite/templates/faq.html:48
+msgid "Or you can automatically share your captures to Twitter or email "
 msgstr ""
-"Ou você pode automaticamente compartilhar suas capturas para o Twitter, "
-"Facebook ou e-mail "
+"Ou você pode automaticamente compartilhar suas capturas para o Twitter ou e-"
+"mail "
 
 #: mymwebsite/templates/faq.html:50 mymwebsite/templates/howto.html:50
 msgid "(Configure here.)"
@@ -1342,38 +1341,23 @@ msgstr "QUESTÕES RELACIONADAS COM A WEB APP"
 msgid "Where can I find more details about the MyMensor Web App?"
 msgstr "Onde posso encontrar mais detalhes sobre o MyMensor Web App?"
 
-#: mymwebsite/templates/faq.html:398 mymwebsite/templates/howto.html:398
+#: mymwebsite/templates/faq.html:398 mymwebsite/templates/faq.html:414
+#: mymwebsite/templates/faq.html:430
 msgid ""
-"Info can be found in the videos section, specially on the Mymensor Web App - "
-"Feature Tour "
+"Info can be found in the videos section, specially on the Mymensor Web App "
+"videos"
 msgstr ""
 "Informações podem ser encontradas na seção de vídeos, especialmente no vídeo "
-"MyMensor Web App - Passeio pelas Funcionalidades "
+"MyMensor Web App"
 
 #: mymwebsite/templates/faq.html:408 mymwebsite/templates/howto.html:408
 msgid "How do I transform images into data?"
 msgstr "Como faço para transformar imagens em dados?"
 
-#: mymwebsite/templates/faq.html:414 mymwebsite/templates/howto.html:414
-msgid ""
-"Info can be found in the videos section, specially on the Mymensor Web App - "
-"Configuring VPs and TAGs "
-msgstr ""
-"Informações podem ser encontradas na seção de vídeos, especialmente no vídeo "
-"MyMensor Web App -Configurando VPs e TAGs "
-
 #: mymwebsite/templates/faq.html:424 mymwebsite/templates/howto.html:424
 msgid "How do I manage Media and Data information in MyMensor Web App?"
 msgstr ""
 "Como faço para gerenciar informações de mídia e dados no MyMensor Web App?"
-
-#: mymwebsite/templates/faq.html:430 mymwebsite/templates/howto.html:430
-msgid ""
-"Info can be found in the videos section, specially on the Mymensor Web App - "
-"Media and Data "
-msgstr ""
-"Informações podem ser encontradas na seção de vídeos, especialmente no vídeo "
-"MyMensor Web App - Mídias e Dados "
 
 #: mymwebsite/templates/faq.html:440 mymwebsite/templates/howto.html:440
 msgid "How do I move an image or video between VPs folders?"
@@ -1466,15 +1450,15 @@ msgstr ""
 msgid "Can I automatically share the captured photos and videos?"
 msgstr "Posso compartilhar automaticamente as fotos e os vídeos capturados?"
 
-#: mymwebsite/templates/faq.html:539 mymwebsite/templates/howto.html:539
+#: mymwebsite/templates/faq.html:539
 msgid ""
 "Yes, once you have entered our Web App with your credentials, click on the "
-"logged in item and set up facebook, twitter accounts that you want to use to "
+"logged in item and set up the Twitter account that you want to use to "
 "automatically share your media."
 msgstr ""
 "Sim, uma vez que você inseriu suas credenciais em nossa Web App, clique no "
-"item logado e configure as contas de facebook e twitter que você deseja usar "
-"para compartilhar automaticamente suas mídias."
+"item logado e configure a conta de Twitter que você deseja usar para "
+"compartilhar automaticamente suas mídias."
 
 #: mymwebsite/templates/faq.html:540 mymwebsite/templates/howto.html:540
 msgid ""
@@ -1485,15 +1469,15 @@ msgstr ""
 "deve marcar a caixa de compartilhamento em cada uma das pastas de VPs que "
 "você deseja compartilhar automaticamente."
 
-#: mymwebsite/templates/faq.html:541 mymwebsite/templates/howto.html:541
+#: mymwebsite/templates/faq.html:541
 msgid ""
 "In this same screen you can also select an email to automatically receive "
-"the captured media. Unlike Facebook and Twitter, emails accounts may be "
-"different for each VP."
+"the captured media. Unlike Twitter account, emails accounts may be different "
+"for each VP."
 msgstr ""
 "Nesta mesma tela você também pode selecionar um e-mail para receber "
-"automaticamente a mídia capturada. Ao contrário do Facebook e Twitter, "
-"contas de e-mails podem ser diferentes para cada VP."
+"automaticamente a mídia capturada. Ao contrário do Twitter, as contas de e-"
+"mails podem ser diferentes para cada VP."
 
 #: mymwebsite/templates/faq.html:566 mymwebsite/templates/howto.html:566
 msgid ""
@@ -1528,6 +1512,57 @@ msgstr ""
 #: mymwebsite/templates/howto.html:7
 msgid "How To"
 msgstr "Como fazer"
+
+#: mymwebsite/templates/howto.html:48
+msgid ""
+"Or you can automatically share your captures to Twitter, Facebook or email "
+msgstr ""
+"Ou você pode automaticamente compartilhar suas capturas para o Twitter, "
+"Facebook ou e-mail "
+
+#: mymwebsite/templates/howto.html:398
+msgid ""
+"Info can be found in the videos section, specially on the Mymensor Web App - "
+"Feature Tour "
+msgstr ""
+"Informações podem ser encontradas na seção de vídeos, especialmente no vídeo "
+"MyMensor Web App - Passeio pelas Funcionalidades "
+
+#: mymwebsite/templates/howto.html:414
+msgid ""
+"Info can be found in the videos section, specially on the Mymensor Web App - "
+"Configuring VPs and TAGs "
+msgstr ""
+"Informações podem ser encontradas na seção de vídeos, especialmente no vídeo "
+"MyMensor Web App -Configurando VPs e TAGs "
+
+#: mymwebsite/templates/howto.html:430
+msgid ""
+"Info can be found in the videos section, specially on the Mymensor Web App - "
+"Media and Data "
+msgstr ""
+"Informações podem ser encontradas na seção de vídeos, especialmente no vídeo "
+"MyMensor Web App - Mídias e Dados "
+
+#: mymwebsite/templates/howto.html:539
+msgid ""
+"Yes, once you have entered our Web App with your credentials, click on the "
+"logged in item and set up facebook, twitter accounts that you want to use to "
+"automatically share your media."
+msgstr ""
+"Sim, uma vez que você inseriu suas credenciais em nossa Web App, clique no "
+"item logado e configure as contas de facebook e twitter que você deseja usar "
+"para compartilhar automaticamente suas mídias."
+
+#: mymwebsite/templates/howto.html:541
+msgid ""
+"In this same screen you can also select an email to automatically receive "
+"the captured media. Unlike Facebook and Twitter, emails accounts may be "
+"different for each VP."
+msgstr ""
+"Nesta mesma tela você também pode selecionar um e-mail para receber "
+"automaticamente a mídia capturada. Ao contrário do Facebook e Twitter, "
+"contas de e-mails podem ser diferentes para cada VP."
 
 #: mymwebsite/templates/index.html:33 mymwebsite/templates/index.html:81
 #: mymwebsite/templates/innerbase.html:89
