--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-10-20 17:38+0100\n"
+"POT-Creation-Date: 2017-11-14 14:12+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -96,7 +96,7 @@ msgstr ""
 msgid "Making Sure that a Photo is NOT a Fake"
 msgstr ""
 
-#: mymwebsite/templates/cases.html:14 mymwebsite/templates/howto.html:14
+#: mymwebsite/templates/cases.html:14
 msgid ""
 "On this day and age, how can one be sure that a photo is not a fake? Of "
 "course there are a number of very sofisticated methods to assure that, with "
@@ -115,7 +115,7 @@ msgstr ""
 msgid "Following Jobs Remotely "
 msgstr ""
 
-#: mymwebsite/templates/cases.html:22 mymwebsite/templates/howto.html:22
+#: mymwebsite/templates/cases.html:22
 msgid ""
 "One cannot be in more than one place at the same time, sure? Not quite, if "
 "we use the technology that is available right now!"
@@ -125,7 +125,7 @@ msgstr ""
 msgid "Using <u>Your</u> Own Data for <u>Your</u> Own Benefit "
 msgstr ""
 
-#: mymwebsite/templates/cases.html:30 mymwebsite/templates/howto.html:30
+#: mymwebsite/templates/cases.html:30
 msgid ""
 "Do like all big tech corporations are doing. They are using <u>your</u> data "
 "for <u>their</u> benefit, and most of the time we cannot prevent that. "
@@ -138,7 +138,6 @@ msgid "Following Jobs Remotely"
 msgstr ""
 
 #: mymwebsite/templates/cases/followingremotejobs.html:10
-#: mymwebsite/templates/howto/followingremotejobs.html:10
 msgid ""
 "I have a friend that is a very successful accountant in an European country. "
 "Once he told me a tale of a client who <mark>invested in the construction of "
@@ -146,12 +145,10 @@ msgid ""
 msgstr ""
 
 #: mymwebsite/templates/cases/followingremotejobs.html:11
-#: mymwebsite/templates/howto/followingremotejobs.html:11
 msgid "Everything went well, so he decided to go for the second one."
 msgstr ""
 
 #: mymwebsite/templates/cases/followingremotejobs.html:12
-#: mymwebsite/templates/howto/followingremotejobs.html:12
 msgid ""
 "In the first one <mark>he had relied on photos sent to him via email to "
 "check the progress of the project</mark>, only going on site for the "
@@ -160,7 +157,6 @@ msgid ""
 msgstr ""
 
 #: mymwebsite/templates/cases/followingremotejobs.html:13
-#: mymwebsite/templates/howto/followingremotejobs.html:13
 msgid ""
 "The trouble is that the second building was delayed, he continued receiving "
 "the photos by email, eventually he decided to take a flight and make a "
@@ -169,7 +165,6 @@ msgid ""
 msgstr ""
 
 #: mymwebsite/templates/cases/followingremotejobs.html:14
-#: mymwebsite/templates/howto/followingremotejobs.html:14
 msgid ""
 "<mark>There was no second building!</mark> His money was gone and down there "
 "he discovered that he was targeted with a scam known to the locals. He "
@@ -177,7 +172,6 @@ msgid ""
 msgstr ""
 
 #: mymwebsite/templates/cases/followingremotejobs.html:15
-#: mymwebsite/templates/howto/followingremotejobs.html:15
 msgid ""
 "<mark>Using just the MyMensor Media Plan one could follow the project "
 "headway remotely using the certified media.</mark> Going even deeper you "
@@ -187,19 +181,19 @@ msgid ""
 msgstr ""
 
 #: mymwebsite/templates/cases/followingremotejobs.html:16
-#: mymwebsite/templates/howto/followingremotejobs.html:16
+#: mymwebsite/templates/howto/followingremotejobs.html:24
 msgid ""
 "Do you have a remote project and it is going astray? We can help mend that! "
 msgstr ""
 
 #: mymwebsite/templates/cases/followingremotejobs.html:18
-#: mymwebsite/templates/howto/followingremotejobs.html:18
+#: mymwebsite/templates/howto/followingremotejobs.html:26
 msgid "Start your 30-day free-trial now. "
 msgstr ""
 
 #: mymwebsite/templates/cases/followingremotejobs.html:18
 #: mymwebsite/templates/cases/genusemediaplan.html:17
-#: mymwebsite/templates/howto/followingremotejobs.html:18
+#: mymwebsite/templates/howto/followingremotejobs.html:26
 #: mymwebsite/templates/howto/genusemediaplan.html:47
 msgid ""
 "<mark>No Credit Card is required during trial period</mark> and, even when "
@@ -253,7 +247,7 @@ msgstr ""
 #: mymwebsite/templates/cases/genusemediaplan.html:17
 #: mymwebsite/templates/cases/usingyourowndata.html:24
 #: mymwebsite/templates/howto/genusemediaplan.html:47
-#: mymwebsite/templates/howto/usingyourowndata.html:24
+#: mymwebsite/templates/howto/usingyourowndata.html:16
 msgid "start your 30-day free-trial now! "
 msgstr ""
 
@@ -268,7 +262,6 @@ msgid "Man surfing the bigdata wave, in form of a dollar sign."
 msgstr ""
 
 #: mymwebsite/templates/cases/usingyourowndata.html:10
-#: mymwebsite/templates/howto/usingyourowndata.html:10
 msgid ""
 "We all know that the big corporations are gathering all the data they "
 "possibly can about ourselves and our businesses in order to drive their "
@@ -276,14 +269,12 @@ msgid ""
 msgstr ""
 
 #: mymwebsite/templates/cases/usingyourowndata.html:11
-#: mymwebsite/templates/howto/usingyourowndata.html:11
 msgid ""
 "With today's technology we can do that ourselves, can't we? So, why we do "
 "not build our own big data? Is it worth the effort?"
 msgstr ""
 
 #: mymwebsite/templates/cases/usingyourowndata.html:12
-#: mymwebsite/templates/howto/usingyourowndata.html:12
 msgid ""
 "How to turn the big data revolution into something that increases the "
 "profitability of your own business? Today we see several simple ideas "
@@ -292,7 +283,6 @@ msgid ""
 msgstr ""
 
 #: mymwebsite/templates/cases/usingyourowndata.html:13
-#: mymwebsite/templates/howto/usingyourowndata.html:13
 msgid ""
 "But what is Big Data? By definition of BARC (Business Application Research "
 "Center), from Germany, the term Big Data refers to the methods and "
@@ -301,14 +291,12 @@ msgid ""
 msgstr ""
 
 #: mymwebsite/templates/cases/usingyourowndata.html:14
-#: mymwebsite/templates/howto/usingyourowndata.html:14
 msgid ""
 "The big data certainly is one of the best drives of profitability generation "
 "that can be used by any business."
 msgstr ""
 
 #: mymwebsite/templates/cases/usingyourowndata.html:15
-#: mymwebsite/templates/howto/usingyourowndata.html:15
 msgid ""
 "To Prove this statement, we have the study released in July 2015 by BARC, "
 "called 'Big Data Use Cases', with over <strong>540 participants worldwide </"
@@ -317,12 +305,10 @@ msgstr ""
 
 #: mymwebsite/templates/cases/usingyourowndata.html:15
 #: mymwebsite/templates/howto/genusemediaplan.html:14
-#: mymwebsite/templates/howto/usingyourowndata.html:15
 msgid "here."
 msgstr ""
 
 #: mymwebsite/templates/cases/usingyourowndata.html:16
-#: mymwebsite/templates/howto/usingyourowndata.html:16
 #, python-format
 msgid ""
 "Companies have used various data sources to form their Big Data. From the "
@@ -333,7 +319,6 @@ msgid ""
 msgstr ""
 
 #: mymwebsite/templates/cases/usingyourowndata.html:17
-#: mymwebsite/templates/howto/usingyourowndata.html:17
 #, python-format
 msgid ""
 "Big Data is not any longer in the realm of research and arrived to the real "
@@ -344,7 +329,6 @@ msgid ""
 msgstr ""
 
 #: mymwebsite/templates/cases/usingyourowndata.html:18
-#: mymwebsite/templates/howto/usingyourowndata.html:18
 #, python-format
 msgid ""
 "Among the benefits found, <strong>69%% report better strategic decisions</"
@@ -353,20 +337,18 @@ msgid ""
 msgstr ""
 
 #: mymwebsite/templates/cases/usingyourowndata.html:19
-#: mymwebsite/templates/howto/usingyourowndata.html:19
 msgid ""
 "<strong>So let’s get to work!</strong> The technology is available and the "
 "results are proven! Let's use the big data wave to drive your profits up!"
 msgstr ""
 
 #: mymwebsite/templates/cases/usingyourowndata.html:20
-#: mymwebsite/templates/howto/usingyourowndata.html:20
 msgid ""
 "<mark>You must be thinking: how can I do that in my own business?</mark>"
 msgstr ""
 
 #: mymwebsite/templates/cases/usingyourowndata.html:21
-#: mymwebsite/templates/howto/usingyourowndata.html:21
+#: mymwebsite/templates/howto/usingyourowndata.html:13
 msgid ""
 "MyMensor can help you accomplish that. With the use of the <mark>MyMensor "
 "Media and Data Plan</mark> you will be able to gather the data you need to "
@@ -375,14 +357,14 @@ msgid ""
 msgstr ""
 
 #: mymwebsite/templates/cases/usingyourowndata.html:22
-#: mymwebsite/templates/howto/usingyourowndata.html:22
+#: mymwebsite/templates/howto/usingyourowndata.html:14
 msgid ""
 "But OK, we are getting a little bit ahead of ourselves here! Firstly, you "
 "need to "
 msgstr ""
 
 #: mymwebsite/templates/cases/usingyourowndata.html:24
-#: mymwebsite/templates/howto/usingyourowndata.html:24
+#: mymwebsite/templates/howto/usingyourowndata.html:16
 msgid ""
 "<mark>No Credit Card is required during trial period</mark> and, even after "
 "you have subscribed, you can easily cancel at any time, just clicking a "
@@ -390,7 +372,7 @@ msgid ""
 msgstr ""
 
 #: mymwebsite/templates/cases/usingyourowndata.html:26
-#: mymwebsite/templates/howto/usingyourowndata.html:26
+#: mymwebsite/templates/howto/usingyourowndata.html:18
 msgid ""
 "Use your trial period to learn in our website how to setup a simple an "
 "efficient way to drive your business profits up! And, of course, drop us an "
@@ -1165,10 +1147,125 @@ msgstr ""
 msgid "How to?"
 msgstr ""
 
+#: mymwebsite/templates/howto.html:14
+msgid "How to do that using MyMensor???? Click and learn!!!"
+msgstr ""
+
+#: mymwebsite/templates/howto.html:22
+msgid ""
+"MyMensor will empower you to accomplish that! Follow our step by step how-to "
+"guide."
+msgstr ""
+
+#: mymwebsite/templates/howto.html:30
+msgid ""
+"How can <u>I do that?</u> Find here a detailed guide on how MyMensor will "
+"build that for <u>YOU</u>. "
+msgstr ""
+
 #: mymwebsite/templates/howto/followingremotejobs.html:4
 #: mymwebsite/templates/howto/genusemediaplan.html:4
 #: mymwebsite/templates/howto/usingyourowndata.html:4
 msgid "How To"
+msgstr ""
+
+#: mymwebsite/templates/howto/followingremotejobs.html:10
+msgid ""
+"How to<mark> follow remote jobs using MyMensor? </mark>Do I have to tell the "
+"remote party to contract MyMensor?"
+msgstr ""
+
+#: mymwebsite/templates/howto/followingremotejobs.html:11
+msgid "No! It is<mark> MUCH SIMPLER THAN THAT! </mark>"
+msgstr ""
+
+#: mymwebsite/templates/howto/followingremotejobs.html:12
+msgid ""
+"You could start with your own MyMensor account, but for this example let's "
+"say that you will start by creating a brand new MyMensor account. Then after "
+"creating the new account you will create a <mark> SERVICE USER. </mark> This "
+"is a special type of user that is tied to your primary account and can "
+"<mark>ONLY CAPTURE MEDIA TO YOU</mark>, with this set of credentials this "
+"person <mark>CANNOT ACCESS</mark> your MyMensor account on the Web. Please "
+"refer to the points below for a detailed walkthrough on how to do it."
+msgstr ""
+
+#: mymwebsite/templates/howto/followingremotejobs.html:13
+msgid "<strong>1.</strong> Create a MyMensor account "
+msgstr ""
+
+#: mymwebsite/templates/howto/followingremotejobs.html:15
+msgid "here. "
+msgstr ""
+
+#: mymwebsite/templates/howto/followingremotejobs.html:15
+msgid ""
+"If you are already logged in to MyMensor in this computer, please logoff "
+"first, as otherwise your account will be opened automatically."
+msgstr ""
+
+#: mymwebsite/templates/howto/followingremotejobs.html:16
+msgid ""
+"<strong>2.</strong> Then you follow the usual drill here, confirm the email "
+"you used for the account and go on."
+msgstr ""
+
+#: mymwebsite/templates/howto/followingremotejobs.html:17
+msgid ""
+"<strong>3.</strong> Log in to the new account, at it is a new account and "
+"your Portfolio is empty."
+msgstr ""
+
+#: mymwebsite/templates/howto/followingremotejobs.html:18
+msgid ""
+"<strong>4.</strong> In the top right of your screen you will see the "
+"username in bold letters, click on it to open a dropdown menu. In this menu "
+"click on <strong>Service User</strong>"
+msgstr ""
+
+#: mymwebsite/templates/howto/followingremotejobs.html:19
+msgid ""
+"<strong>5.</strong> Now create a password for your service user. Take note "
+"of the password you have created. Remember that MyMensor cannot access any "
+"of the passwords you create! After that MyMensor will automatically create a "
+"username for your service user, based on your own username."
+msgstr ""
+
+#: mymwebsite/templates/howto/followingremotejobs.html:20
+msgid ""
+"<strong>6.</strong> So your service user is created. You can always come "
+"back at this same screen to change the current service user password or to "
+"delete the service user."
+msgstr ""
+
+#: mymwebsite/templates/howto/followingremotejobs.html:21
+msgid ""
+"<strong>7.</strong> Now send a link to our download page (https://mymensor."
+"com/download/) together with the username and the password to the person "
+"that you want to make captures to you. Remember that with this set of "
+"credentials this person <mark>CANNOT ACCESS</mark> your MyMensor account on "
+"the Web, the only thing that he or she can do is to capture media that will "
+"be sent directly to your account."
+msgstr ""
+
+#: mymwebsite/templates/howto/followingremotejobs.html:22
+msgid ""
+"<strong>8.</strong> You will see the captures from your service user as they "
+"come. The captures of each service user you ever create can be seen on the "
+"MyMensor WebApp, <mark>even after you delete a service user.</mark> After "
+"its deletion, the service user will not be able to send any media to your "
+"account anymore, but you will keep in the MyMensor Server all the media you "
+"have received."
+msgstr ""
+
+#: mymwebsite/templates/howto/followingremotejobs.html:23
+msgid ""
+"By using MyMensor, even with the Media only plan, you will be able to follow "
+"jobs remotely trusting that the media you receive is genuine and was not "
+"modified. The location and time certification coupled with the ability to "
+"<mark>extend your capturing powers to remote users</mark> gives you a "
+"tremendous power to survey jobs in different locations with <mark>great "
+"confidence.</mark>"
 msgstr ""
 
 #: mymwebsite/templates/howto/genusemediaplan.html:10
@@ -1237,6 +1334,26 @@ msgstr ""
 
 #: mymwebsite/templates/howto/genusemediaplan.html:44
 msgid "We hope this will make your life easier!"
+msgstr ""
+
+#: mymwebsite/templates/howto/usingyourowndata.html:10
+msgid ""
+"With MyMensor you can be sure that the media you receive is genuine, you can "
+"use service users to capture media from remote locations and deliver that to "
+"you automatically, always with confidence. But there is more to MyMensor "
+"than all that."
+msgstr ""
+
+#: mymwebsite/templates/howto/usingyourowndata.html:11
+msgid ""
+"MyMensor provides you with some simple, but very efffective tools, to gather "
+"data on the field. You use the aforementioned features and with the media "
+"received you can process the data. With time you will amass a huge amount of "
+"information."
+msgstr ""
+
+#: mymwebsite/templates/howto/usingyourowndata.html:12
+msgid "Let me show you this "
 msgstr ""
 
 #: mymwebsite/templates/index.html:33 mymwebsite/templates/index.html:81
